Fix spacing in login div

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -78,7 +78,7 @@ body {
 	display: block;
 	width: 70px;
 	margin: auto;
-	margin-top: 130px;
+	margin-top: 95px;
 	bottom: 0;
 }
 
